syntax = "proto3";

package proto.helloworld.v1;

option java_package = "com.falland.gprc.longlivedstreams.proto.helloworld.v1";
option java_multiple_files = true;
option java_outer_classname = "HelloWorldService";

service HelloWorld {
    rpc Say (Hello) returns (World) {
    }

    rpc SayServerStreaming (Hello) returns (stream World) {
    }

    rpc SayClientStreaming (stream Hello) returns (World) {
    }

    rpc SayBiDi (stream Hello) returns (stream World) {
    }
}

message Hello {
    string message = 1;
    string clientId = 2;
    ResponseStrategy responseStrategy = 3;
}

message World {
    string reply = 1;
    bytes payload = 2;
    int32 group = 3;
}

enum ResponseStrategy {
    UNKNOWN = 0;
    FREE_FLOW = 1;
    EXCEPTION_ON_OVERFLOW = 2;
    DROP_NEW_ON_OVERFLOW = 3;
    DROP_OLD_ON_OVERFLOW = 4;
    MERGE = 5;
    BLOCK = 6;
}


